--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -21,11 +21,9 @@
 
 
 
-    <div class="row">
+  <div class="row">
 
-      <div class="col-xs-8">
-
-        <div class="card-profile">
+        <div class="card-profile col-xs-12 col-sm-12 col-md-8">
           <%= cl_image_tag @profile.photo, :width => 150, :height => 150, crop: :fill, id: "profile", gravity: :face %>
           <div class="left-description">
             <h4>
@@ -38,18 +36,16 @@
             </h4>
           </div>
         </div>
-      </div>
 
-      <div class="col-xs-4"
+      <div class="col-xs-12 col-sm-12 col-md-4"
             id="map"
-            style="width: 400px;
-            height: auto; margin: 10px auto; box-shadow: 0 0 10px rgba(0,0,0,0.2);"
+            style="width: 100%;
+            height: 250px; margin: 10px auto; box-shadow: 0 0 10px rgba(0,0,0,0.2);"
             data-markers="<%= @markers.to_json %>"
             data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
       ></div>
 
-
-    </div>
+  </div>
 
     <% if !current_user.bars.empty?%>
 
