--- a/app/assets/stylesheets/components/_chat-sidenav.scss
+++ b/app/assets/stylesheets/components/_chat-sidenav.scss
@@ -23,6 +23,7 @@
   &:hover {
     color:white;
     font-style: bold;
+  }
 }
 
 .sidenav-message-container:hover {
@@ -44,6 +45,5 @@
 
 .partner-name {
   text-align: center;
-
 }
 
