--- a/app/assets/stylesheets/components/_banner-bar.scss
+++ b/app/assets/stylesheets/components/_banner-bar.scss
@@ -93,18 +93,22 @@ label {
   h1  {
   font-family: $bebas;
   font-size: 20vw;
-  text-align: left;
-  position: absolute;
-  top: 220px;
-  left: 40px;
   color: white;
+  }
+  .text-ban {
+    text-align: left;
+    position: absolute;
+    top: 10vh;
+    left: 5vw;
+  }
+  h3{
+    font-size: 5vw;
   }
   .e-date {
   color: white;
   text-align: left;
-  position: absolute;
-  left: 100px;
-  top: 380px;
+  position: relative;
+  left: 10vh;
   }
 }
 
