--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -35,6 +35,8 @@
 
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
+  flex-shrink: 1;
+  max-width: 100vw !important;
 }
 
 .navbar-lewagon .navbar-brand img {
@@ -47,7 +49,10 @@
   position: fixed;
   top: 0;
   right: 0;
-  width: 100%;
+  left: 0;
+  margin: 0px;
+  padding: 0px;
+  max-width: 100vw !important;
   z-index: 200;
 }
 
@@ -89,5 +94,9 @@ li a.nav-link:hover {
 
 .navbar-nav {
   width: 100%;
+}
+
+body {
+  overflow-x:hidden;
 }
 
