--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -8,6 +8,7 @@
 @import "animation";
 @import "map";
 @import "banner-bar";
+@import "banner-event";
 @import "links";
 @import "banner-home";
 @import "message";
