--- a/app/assets/stylesheets/components/_chat-sidenav.scss
+++ b/app/assets/stylesheets/components/_chat-sidenav.scss
@@ -3,7 +3,8 @@
   left: 0;
   top: 0;
   background-color: $bv-hangar;
-  width: 300px;
+  width: 20vw;
+  min-width: 200px;
   height: 100%;
   margin-top: 70px;
   padding-bottom: 130px;
