--- a/app/assets/stylesheets/components/_message.scss
+++ b/app/assets/stylesheets/components/_message.scss
@@ -1,7 +1,8 @@
 .message-cont {
   position: fixed;
   right: 0;
-  width: calc(100vw - 300px);
+  width: 79vw;
+  max-width: calc(100vw - 200px);
   height: calc(100vh - 70px);
   padding-left: 10px;
   margin-top: 70px;
@@ -72,9 +73,13 @@ input.form-control {
   box-shadow: none;
   font-size: 14px;
   color: $bv-hangar;
-  position: fixed;
-  bottom: 20px;
   border-radius: 5px;
+  position: relative;
+  right: 20px;
+  width: calc(100vw - 21vw);
+  max-width: calc(100vw - 230px);
+  position: absolute;
+  bottom: 20px;
   &:focus {
     outline: none;
     border: 1px solid $bv-hangar;
@@ -83,7 +88,9 @@ input.form-control {
 }
 
 .chat-header {
-  position: sticky; top: 70px;
+  position: sticky;
+  top: 70px;
+  right: 0px;
   display: flex;
   border-radius: 5px;
   justify-content: space-between;
