fixed order of .messages array + refactor of navbar_is_white

--- a/app/views/chatboxes/show.html.erb
+++ b/app/views/chatboxes/show.html.erb
@@ -8,7 +8,7 @@
                   </div>
                   <div class="last-msg-content">
                     <div class="white nodec">
-                      <strong><%= hash[:partners_name] %></strong>
+                      <strong><%= hash[:partner_name] %></strong>
                     </div>
                     <p><%= hash[:last_msgs_content] %></p>
                   </div>
