--- a/app/views/bars/edit.html.erb
+++ b/app/views/bars/edit.html.erb
@@ -1,5 +1,7 @@
-<div class="container">
-  <% if current_user == @bar.user %>
-    <%= render 'form' %>
-  <% end %>
+<div class="fuckfooter">
+  <br><br><br><br><div class="container">
+    <% if current_user == @bar.user %>
+      <%= render 'form' %>
+    <% end %>
+  </div>
 </div>
