--- a/app/views/bars/new.html.erb
+++ b/app/views/bars/new.html.erb
@@ -1,4 +1,6 @@
-<div class="container">
-  <h1>Add your bar infos</h1>
-  <%= render 'form' %>
+<div class="fuckfooter">
+  <br><br><br><br><div class="container">
+    <h1>Add your bar infos</h1>
+    <%= render 'form' %>
+  </div>
 </div>
