--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -1,11 +1,13 @@
 <br><br><br><br><br>
-<div class="container">
-  <div class="card-login">
-    <h1>select pictures to upload</h1>
-    <%= simple_form_for [@bar, @picture] do |f| %>
-      <%= f.error_notification %>
-      <%= f.input :pictures, as: :file, input_html: { multiple: true } %>
-      <%= f.button :submit, "Upload", class: "b-border-whitebg" %>
-    <% end %>
+<div class="fuckfooter">
+  <div class="container">
+    <div class="card-login">
+      <h1>select pictures to upload</h1>
+      <%= simple_form_for [@bar, @picture] do |f| %>
+        <%= f.error_notification %>
+        <%= f.input :pictures, as: :file, input_html: { multiple: true } %>
+        <%= f.button :submit, "Upload", class: "b-border-whitebg" %>
+      <% end %>
+    </div>
   </div>
 </div>
