--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,4 +1,6 @@
-<div class="container">
-  <h1>Welcome aboard ! </h1>
-  <%= render 'form' %>
+<div class="fuckfooter"></div>
+  <div class="container">
+    <h1>Welcome aboard ! </h1>
+    <%= render 'form' %>
+  </div>
 </div>
