--- a/app/views/profiles/dashboard.html.erb
+++ b/app/views/profiles/dashboard.html.erb
@@ -1,4 +1,5 @@
-<div class="container"><br><br><br><br>
+<div class="fuckfooter">
+  <div class="container"><br><br><br><br>
 
 
   <% if !@unconfirmed_events.empty? %>
@@ -105,5 +106,6 @@
   <% end %>
 
   </div>
+</div>
 
 
