--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,6 +1,6 @@
-<div class="fuckfooter"></div>
+<div class="fuckfooter">
   <div class="container">
-    <h1>Welcome aboard ! </h1>
+    <br><br><br><br><h1>Welcome aboard ! </h1>
     <%= render 'form' %>
   </div>
 </div>
