--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -2,179 +2,179 @@
 <% if @profile.is_artist %>
 <%= render 'artist-banner'%>
 <%end%>
+<div class="fuckfooter">
+  <div class="container">
 
-<div class="container">
+    <% if @profile.is_artist %>
 
-  <% if @profile.is_artist %>
+    <br><div class="row">
+      <% @pictures.each do |picture| %>
+        <div class="col-xs-4 col-sm-4 col-md-2">
+        <%= cl_image_tag picture.photo, :width => 150, :height => 150, crop: :fill, id: "profile", gravity: :face %>
 
-  <br><div class="row">
-    <% @pictures.each do |picture| %>
-      <div class="col-xs-4 col-sm-4 col-md-2">
-      <%= cl_image_tag picture.photo, :width => 150, :height => 150, crop: :fill, id: "profile", gravity: :face %>
-
-      <% if current_user == @profile.user %>
-        <%= link_to "✖️" , artist_picture_path(picture), method: :delete, data: { confirm: "Are you sure?" }, class:"no" %>
-      <% end %>
-      </div>
-    <% end %>
-  </div>
-
-
-
-  <div class="row">
-
-        <div class="card-profile col-xs-12 col-sm-12 col-md-8">
-          <%= cl_image_tag @profile.photo, :width => 150, :height => 150, crop: :fill, id: "profile", gravity: :face %>
-          <div class="left-description">
-            <h4>
-              <% @star.times do %>
-                  <i class="fas fa-star"></i>
-              <% end %>
-            </h4>
-            <h4>
-              <%= @profile.artist_description %>
-            </h4>
-          </div>
-        </div>
-
-      <div class="col-xs-12 col-sm-12 col-md-4"
-            id="map"
-            style="width: 100%;
-            height: 250px; margin: 10px auto; box-shadow: 0 0 10px rgba(0,0,0,0.2);"
-            data-markers="<%= @markers.to_json %>"
-            data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
-      ></div>
-
-  </div>
-
-    <% if !current_user.bars.empty?%>
-
-      <h1>
-          Partners
-      </h1>
-      <div class="row">
-        <% @bars.each do |bar| %>
-          <div class="col-xs-10 col-sm-6 col-md-4">
-            <% if !bar.pictures.empty? %>
-              <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.2)), url('<%= bar.pictures[0].photo %>');">
-              <%= link_to bar.name, bar_path(bar), class:"bw-border-tbg" %>
-              </div>
-            <%end%>
-          </div>
-        <%end%>
-      </div><br>
-
-
-      <% if !@reviews.empty? && current_user.profile.is_bar_manager%>
-        <h1>Reviews</h1>
-          <div class="row">
-            <% @reviews.each do |review| %>
-              <div class="col-xs-10 col-sm-6 col-md-4 col-lg-3">
-                <div class="review">
-                  <h4>
-                    <% review[:rating].times do %>
-                        <i class="fas fa-star"></i>
-                    <% end %>
-                  </h4>
-
-                    “<%= review[:content] %>”
-
-                   -<%= link_to review.user.profile.username, profile_path(review.user.profile), class:"blue-link" %>
-                </div>
-              </div>
-            <% end %>
-          </div>
-      <% end %>
-
-
-    <% end %>
-
-    <% if !@profile.user.events.empty? %>
-      <h1>Events</h1>
-      <% @profile.user.events.each do |event| %>
-        <div class="card-hz-bg">
-          <%= cl_image_tag event.photo, width: 200, height: 200, crop: :fill %>
-          <div class="left-description">
-            <h2>
-              <%= link_to event.name, event_path(event), class:"blue-link" %>
-            </h2>
-            <h4>
-              <%= event.description%>
-            </h4>
-          </div>
+        <% if current_user == @profile.user %>
+          <%= link_to "✖️" , artist_picture_path(picture), method: :delete, data: { confirm: "Are you sure?" }, class:"no" %>
+        <% end %>
         </div>
       <% end %>
-    <% end %>
-
-    <% if current_user != @profile.user %>
-      <br><div class="fullspace">
-        <%= link_to "Back to list of artists", profiles_path, class:"b-allwidth-lg" %>
-      </div>
-    <% end %>
-
-
-  <% elsif @profile.is_bar_manager %>
-
-      <br><br><br><br><div class="card-profile-s">
-
-      <%= cl_image_tag @profile.photo, :width => 150, :height => 150, crop: :fill, id: "profile", gravity: :face %>
-      <div class="left-description">
-        <h2>
-          <%= @profile.username %>
-        </h2>
-        <%if current_user == @profile.user %>
-          <br><p>
-            <%= link_to 'Edit my profile', edit_profile_path(@profile), class: "b-border-tbg" %>
-          </p>
-          <br><p>
-            <%= link_to 'Add a new bar !', new_bar_path, class: "b-border-tbg" %>
-          </p>
-        <%end%>
-      </div>
     </div>
 
 
-    <% if !@profile.user.events.empty? %>
-      <br><h1>Events</h1>
-      <% @profile.user.events.each do |event| %>
-        <div class="card-hz-s">
-          <%= cl_image_tag event.photo, width: 200, height: 200, crop: :fill %>
-          <div class="left-description">
-            <h3>
-              <%= link_to event.name, event_path(event), class:"blue-link" %>
-            </h3>
-            <p> <%= event.description%></p>
+
+    <div class="row">
+
+          <div class="card-profile col-xs-12 col-sm-12 col-md-8">
+            <%= cl_image_tag @profile.photo, :width => 150, :height => 150, crop: :fill, id: "profile", gravity: :face %>
+            <div class="left-description">
+              <h4>
+                <% @star.times do %>
+                    <i class="fas fa-star"></i>
+                <% end %>
+              </h4>
+              <h4>
+                <%= @profile.artist_description %>
+              </h4>
+            </div>
           </div>
+
+        <div class="col-xs-12 col-sm-12 col-md-4"
+              id="map"
+              style="width: 100%;
+              height: 250px; margin: 10px auto; box-shadow: 0 0 10px rgba(0,0,0,0.2);"
+              data-markers="<%= @markers.to_json %>"
+              data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+        ></div>
+
+    </div>
+
+      <% if !current_user.bars.empty?%>
+
+        <h1>
+            Partners
+        </h1>
+        <div class="row">
+          <% @bars.each do |bar| %>
+            <div class="col-xs-10 col-sm-6 col-md-4">
+              <% if !bar.pictures.empty? %>
+                <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.2)), url('<%= bar.pictures[0].photo %>');">
+                <%= link_to bar.name, bar_path(bar), class:"bw-border-tbg" %>
+                </div>
+              <%end%>
+            </div>
+          <%end%>
+        </div><br>
+
+
+        <% if !@reviews.empty? && current_user.profile.is_bar_manager%>
+          <h1>Reviews</h1>
+            <div class="row">
+              <% @reviews.each do |review| %>
+                <div class="col-xs-10 col-sm-6 col-md-4 col-lg-3">
+                  <div class="review">
+                    <h4>
+                      <% review[:rating].times do %>
+                          <i class="fas fa-star"></i>
+                      <% end %>
+                    </h4>
+
+                      “<%= review[:content] %>”
+
+                     -<%= link_to review.user.profile.username, profile_path(review.user.profile), class:"blue-link" %>
+                  </div>
+                </div>
+              <% end %>
+            </div>
+        <% end %>
+
+
+      <% end %>
+
+      <% if !@profile.user.events.empty? %>
+        <h1>Events</h1>
+        <% @profile.user.events.each do |event| %>
+          <div class="card-hz-bg">
+            <%= cl_image_tag event.photo, width: 200, height: 200, crop: :fill %>
+            <div class="left-description">
+              <h2>
+                <%= link_to event.name, event_path(event), class:"blue-link" %>
+              </h2>
+              <h4>
+                <%= event.description%>
+              </h4>
+            </div>
+          </div>
+        <% end %>
+      <% end %>
+
+      <% if current_user != @profile.user %>
+        <br><div class="fullspace">
+          <%= link_to "Back to list of artists", profiles_path, class:"b-allwidth-lg" %>
         </div>
       <% end %>
-    <% end %>
-
-    <% if !@profile.user.bars.empty? %>
-
-      <br><h1>Bars</h1>
-      <div class="row">
-        <% @profile.user.bars.each do |bar| %>
-          <div class="col-xs-10 col-sm-6 col-md-4 col-lg-3">
-            <% if !bar.pictures.empty? %>
-              <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.2)), url('<%= bar.pictures[0].photo %>');">
-
-              <%= link_to bar.name, bar_path(bar), class:"bw-border-tbg" %>
-              </div>
-            <%end%>
-          </div>
-        <%end%>
-      </div><br>
 
 
-    <% end %>
+    <% elsif @profile.is_bar_manager %>
 
-    <% if current_user != @profile.user %>
-      <br><div class="fullspace">
-        <%= link_to "Back to bar page", :back, class:"b-allwidth-lg" %>
+        <br><br><br><br><div class="card-profile-s">
+
+        <%= cl_image_tag @profile.photo, :width => 150, :height => 150, crop: :fill, id: "profile", gravity: :face %>
+        <div class="left-description">
+          <h2>
+            <%= @profile.username %>
+          </h2>
+          <%if current_user == @profile.user %>
+            <br><p>
+              <%= link_to 'Edit my profile', edit_profile_path(@profile), class: "b-border-tbg" %>
+            </p>
+            <br><p>
+              <%= link_to 'Add a new bar !', new_bar_path, class: "b-border-tbg" %>
+            </p>
+          <%end%>
+        </div>
       </div>
+
+
+      <% if !@profile.user.events.empty? %>
+        <br><h1>Events</h1>
+        <% @profile.user.events.each do |event| %>
+          <div class="card-hz-s">
+            <%= cl_image_tag event.photo, width: 200, height: 200, crop: :fill %>
+            <div class="left-description">
+              <h3>
+                <%= link_to event.name, event_path(event), class:"blue-link" %>
+              </h3>
+              <p> <%= event.description%></p>
+            </div>
+          </div>
+        <% end %>
+      <% end %>
+
+      <% if !@profile.user.bars.empty? %>
+
+        <br><h1>Bars</h1>
+        <div class="row">
+          <% @profile.user.bars.each do |bar| %>
+            <div class="col-xs-10 col-sm-6 col-md-4 col-lg-3">
+              <% if !bar.pictures.empty? %>
+                <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.2)), url('<%= bar.pictures[0].photo %>');">
+
+                <%= link_to bar.name, bar_path(bar), class:"bw-border-tbg" %>
+                </div>
+              <%end%>
+            </div>
+          <%end%>
+        </div><br>
+
+
+      <% end %>
+
+      <% if current_user != @profile.user %>
+        <br><div class="fullspace">
+          <%= link_to "Back to bar page", :back, class:"b-allwidth-lg" %>
+        </div>
+      <%end%>
+
     <%end%>
 
-  <%end%>
-
+  </div>
 </div>
-
