--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,4 +1,4 @@
-<div class="message <%= user_is_messages_author ? "right" : "" %>">
+<div class="message <%= user_is_messages_author ? "right" : "left" %>">
   <%#= raise %>
   <%= cl_image_tag message.user.profile.photo, class: "avatar" %>
   <div class="message-content"><%= message.content %></div>
