--- a/app/views/events/_event-banner.html.erb
+++ b/app/views/events/_event-banner.html.erb
@@ -1,8 +1,7 @@
 <% if @event[:photo] %>
 
     <div class="banner-event" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= cl_image_path @event.photo, :width => 1300, :height => 780, crop: :fill, class:"d-block w-100"%>');">
-      <div class="container text-ban">
-        <h1><%= @event[:name]%> </h1>
+      <div class="text-ban">
         <div class="e-date">
           <h3><%= @event[:start_date].strftime("%d %B %Y | %Hh%M") %></h3>
           <h3>  <%= @event[:end_date].strftime("- %d %B %Y | %Hh%M") %>
@@ -11,7 +10,8 @@
             <p><%= link_to 'Edit event', edit_event_path(@event), class: "bw-border-tbg" %></p>
             <p><%= link_to 'Delete event', event_path(@event), method: :delete, class: "bw-border-tbg", data: { confirm: "Are you sure?" } %></p>
           <%end%>
-      </div>
+        </div>
+        <h1><%= @event[:name]%> </h1>
       </div>
     </div>
 
