--- a/app/assets/stylesheets/components/_banner-event.scss
+++ b/app/assets/stylesheets/components/_banner-event.scss
@@ -1,48 +1,60 @@
-// time.icon
-// {
-//   font-size: 1em; /* change icon size */
-//   display: block;
-//   position: relative;
-//   width: 7em;
-//   height: 7em;
-//   background-color: #fff;
-//   border-radius: 0.6em;
-//   box-shadow: 0 1px 0 #bdbdbd, 0 2px 0 #fff, 0 3px 0 #bdbdbd, 0 4px 0 #fff, 0 5px 0 #bdbdbd, 0 0 0 1px #bdbdbd;
-//   overflow: hidden;
-// }
+time.icon
+{
+  font-size: 1em; /* change icon size */
+  position: relative;
+  width: 7em;
+  height: 7em;
+  background-color: transparent;
+  border-radius: 0.6em;
+  border: 1px solid;
+  overflow: hidden;
+  box-shadow: 0 0 3px white;
+}
 
-// time.icon *
-// {
-//   display: block;
-//   width: 100%;
-//   font-size: 1em;
-//   font-weight: bold;
-//   font-style: normal;
-//   text-align: center;
-// }
+time.icon *
+{
+  display: block;
+  width: 100%;
+  font-size: 1em;
+  font-weight: bold;
+  font-style: normal;
+  text-align: center;
+}
 
-// time.icon strong
-// {
-//   position: absolute;
-//   top: 0;
-//   padding: 0.4em 0;
-//   color: #fff;
-//   background-color: #fd9f1b;
-//   border-bottom: 1px dashed #f37302;
-//   box-shadow: 0 2px 0 #fd9f1b;
-// }
+time.icon strong
+{
+  position: absolute;
+  top: 0;
+  padding: 0.4em 0;
+  color: #fff;
+  background-color: transparent;
+  border-bottom: 1px solid white;
+  // box-shadow: 0 2px 0 #fd9f1b;
+}
 
-// time.icon em
-// {
-//   position: absolute;
-//   bottom: 0.3em;
-//   color: #fd9f1b;
-// }
+time.icon em
+{
+  position: absolute;
+  bottom: 0.3em;
+  color: white;
+}
 
-// time.icon span
-// {
-//   font-size: 2.8em;
-//   letter-spacing: -0.05em;
-//   padding-top: 0.8em;
-//   color: #2f2f2f;
-// }
+time.icon span
+{
+  width: 100%;
+  font-size: 2.8em;
+  letter-spacing: -0.05em;
+  color: white;
+  line-height:50px;
+  padding-top: 0.8em;
+}
+
+.date-icons {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+#arrow {
+}
