--- a/app/views/profiles/_artist-banner.html.erb
+++ b/app/views/profiles/_artist-banner.html.erb
@@ -9,7 +9,9 @@
           <p><%= link_to 'Edit my profile', edit_profile_path(@profile), class: "bw-border-tbg" %></p>
         <%end%>
         <h1><%= @profile[:username].capitalize %>
-        <%= link_to "" , "https://www.instagram.com/#{@profile.instagram_username}", class: "fab fa-instagram largeicon opacity" %></h1>
+        <% if @profile.instagram_username %>
+          <%= link_to "" , "https://www.instagram.com/#{@profile.instagram_username}", class: "fab fa-instagram largeicon opacity" %></h1>
+        <%end%
 
         <h3><% if !current_user.bars.empty? && @profile.is_artist %>
 
@@ -169,8 +171,9 @@
                     Create an event with this artist !
                   </button>
           <%= render 'events/new_modal', profile: @profile, event: Event.new  %>
-
-         <h3><%= link_to "" , "https://www.instagram.com/#{@profile.instagram_username}", class: "fab fa-instagram largeicon" %></h3>
+        <% if @profile.instagram_username %>
+          <h3><%= link_to "" , "https://www.instagram.com/#{@profile.instagram_username}", class: "fab fa-instagram largeicon" %></h3>
+        <% end%>
 
         <% end %></h3>
   </div>
