--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <% render 'layouts/gst'%>
     <%render 'layouts/gtm'%>
-
+     <%= favicon_link_tag asset_path('sparkles.png') %>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>BART</title>
