--- a/app/views/artist_pictures/new.html.erb
+++ b/app/views/artist_pictures/new.html.erb
@@ -1,8 +1,12 @@
-<div class="container">
-  <h1>select pictures to upload</h1>
-  <%= simple_form_for [@profile, @artist_picture] do |f| %>
-    <%= f.error_notification %>
-    <%= f.input :artist_pictures, as: :file, input_html: { multiple: true } %>
-    <%= f.button :submit, "Upload", class: "b-border-tbg" %>
-  <% end %>
+<div class="fuckfooter">
+  <div class="container">
+    <div class="card-login"></div>
+      <h1>select pictures to upload</h1>
+      <%= simple_form_for [@profile, @artist_picture] do |f| %>
+        <%= f.error_notification %>
+        <%= f.input :artist_pictures, as: :file, input_html: { multiple: true } %>
+        <%= f.button :submit, "Upload", class: "b-border-tbg" %>
+      <% end %>
+    </div>
+  </div>
 </div>
