--- a/app/views/pages/_modal_prev.html.erb
+++ b/app/views/pages/_modal_prev.html.erb
@@ -17,9 +17,9 @@
           <h2><%= link_to event.user.profile.username.capitalize, profile_path(event.user),class:"blue-link" %>, </h2>
           <h2>at <%= link_to event.bar.name, bar_path(event.bar), class:"blue-link"%></h2>
           <p> from
-                <%= event.start_date.strftime("%a %B %d") %>
+                <%= event.start_date.strftime("%a %B %d | %H:%M") %>
           </p>
-          <p>   to <%= event.end_date.strftime("%a %B %d") %>
+          <p>   to <%= event.end_date.strftime("%a %B %d | %H:%M") %>
           </p>
           <h4>
               <%= link_to "See artist profile
