--- a/app/views/profiles/_artist-banner.html.erb
+++ b/app/views/profiles/_artist-banner.html.erb
@@ -11,7 +11,7 @@
         <h1><%= @profile[:username].capitalize %>
         <% if @profile.instagram_username %>
           <%= link_to "" , "https://www.instagram.com/#{@profile.instagram_username}", class: "fab fa-instagram largeicon opacity" %></h1>
-        <%end%
+        <%end%>
 
         <h3><% if !current_user.bars.empty? && @profile.is_artist %>
 
@@ -24,8 +24,6 @@
                     Create an event with this artist !
                   </button>
           <%= render 'events/new_modal', profile: @profile, event: Event.new  %>
-
-
 
           <% end %></h3>
 
