--- a/app/views/events/_events_list.html.erb
+++ b/app/views/events/_events_list.html.erb
@@ -11,7 +11,7 @@
 
   <div class="row">
     <% @events.each do |event| %>
-      <div class="col-sm-4">
+      <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.2)), url('<%= event.photo %>');">
           <p class="title"><%= event.name %></p>
           <p class="white"><%= event.start_date.strftime("%a %B %d") %></p>
