--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -1,5 +1,6 @@
 
 .modal-body {
+  z-index: 3000;
   p {
     line-height: 70%
   }
@@ -17,5 +18,7 @@
   font-family: $bebas;
   color: $bv-hangar !important;
 }
+
+
 
 
