--- a/app/assets/stylesheets/components/_message.scss
+++ b/app/assets/stylesheets/components/_message.scss
@@ -6,7 +6,7 @@
   height: calc(100vh - 70px);
   padding-left: 10px;
   margin-top: 70px;
-  .chattin input.form-control {
+  input.form-control {
   border: 1px solid $bv-hangar;
   box-shadow: none;
   font-size: 14px;
