--- a/app/views/chatboxes/show.html.erb
+++ b/app/views/chatboxes/show.html.erb
@@ -8,7 +8,7 @@
                   </div>
                   <div class="last-msg-content">
                     <div class="white nodec">
-                      <strong class="nodec"><%= hash[:partner_name] %></strong>
+                      <strong class="nodec"><%= hash[:partners_name] %></strong>
                     </div>
                     <p class="nodec"><%= hash[:last_msgs_content] %></p>
                   </div>
@@ -36,9 +36,7 @@
             </div>
             <div id="create-message">
               <%= simple_form_for [ @chatbox, Message.new ], remote: true, html: {autocomplete: "off" } do |f| %>
-              <div class="chattin">
                 <%= f.input :content, label: false %>
-              </div>
               <% end %>
             </div>
 
