--- a/app/views/chatboxes/show.html.erb
+++ b/app/views/chatboxes/show.html.erb
@@ -8,7 +8,7 @@
                   </div>
                   <div class="last-msg-content">
                     <div class="white nodec">
-                      <strong class="nodec"><%= hash[:partners_name] %></strong>
+                      <strong class="nodec"><%= hash[:partner_name] %></strong>
                     </div>
                     <p class="nodec"><%= hash[:last_msgs_content] %></p>
                   </div>
