--- a/app/views/chatboxes/show.html.erb
+++ b/app/views/chatboxes/show.html.erb
@@ -36,7 +36,9 @@
             </div>
             <div id="create-message">
               <%= simple_form_for [ @chatbox, Message.new ], remote: true, html: {autocomplete: "off" } do |f| %>
+              <div class="chattin">
                 <%= f.input :content, label: false %>
+              </div>
               <% end %>
             </div>
 
