added event description, fixed button bar home

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,6 +1,10 @@
 <%=render 'event-banner'%>
 
 <div class="container">
+  <%if !@event.description.blank? %>
+    <h1>Description</h1>
+    <h2><%= @event.description %></h2>
+  <% end %>
 
     <div class="row">
 
