--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,6 +17,6 @@
   </div>
 
   <br><h3><%= link_to "Discover our Artists ✨", profiles_path, class: "b-border-tbg fullspace" %></h3>
-  <h3><%= link_to "Discover our bars 🍸", bars_path, class: "b-border-tbg fullspace" %></h3>
+  <h3><%= link_to "Discover our Bars 🍸", bars_path, class: "b-border-tbg fullspace" %></h3>
 
 </div>
