fixed user buttons

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -43,9 +43,9 @@
 
 
 
-      <% if current_user.profile.is_bar_manager %>
-        <p><%= link_to 'Edit event', edit_event_path(@event), class: "b-border-tbg fullspace" %>
-        <%= link_to 'Delete event', event_path(@event), method: :delete, class: "b-border-tbg fullspace", data: { confirm: "Are you sure?" } %></p>
+      <% if current_user.profile.is_bar_manager && current_user == @event.bar.user %>
+          <p><%= link_to 'Edit event', edit_event_path(@event), class: "b-border-tbg fullspace" %>
+          <%= link_to 'Delete event', event_path(@event), method: :delete, class: "b-border-tbg fullspace", data: { confirm: "Are you sure?" } %></p>
       <%end%>
 
 
