--- a/app/views/bars/_bar-banner.html.erb
+++ b/app/views/bars/_bar-banner.html.erb
@@ -142,8 +142,9 @@
 
 <!--/.Carousel Wrapper-->
 
-  <div class="container">
-    <br><br><br><br><h3><%= @bar[:description] %></h3>
+  <br><br><br><br><div class="container">
+    <h1>Description</h1>
+    <h2><%= @bar[:description] %></h2>
 
       <% if current_user == @bar.user %>
 
