--- a/app/views/profiles/_info_window.html.erb
+++ b/app/views/profiles/_info_window.html.erb
@@ -1,4 +1,3 @@
-
-<h2><%= profile.username %></h2>
-<p><%= profile.address %></p
-
+<div class="cardinfo" style="background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.2)), url('<%= profile.photo %>');">
+  <%= link_to profile.username, profile_path(profile), class:"artist no" %>
+ </div>
