modified searching for dates, now accepts 30-08-2019, improved sorting

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
 
   <%= simple_form_for(:event_search, url: events_search_path, remote: true) do |form| %>
     <div class="search-form-control form-group">
-      <%= form.input :content, placeholder: "Find an event...", label: false %>
+      <%= form.input :content, placeholder: "Find events by Artist, Bar, ...", label: false %>
       <%= form.button :submit, 'Search' %>
     </div>
   <% end %>
