--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -73,28 +73,6 @@
   }
 }
 
-// .card-product {
-//   height: 300px;
-//   background: white;
-//   box-shadow: 0 0 10px rgba(0,0,0,0.2);
-//   display: flex;
-//   align-items: start;
-//   margin: 10px auto;
-//   img {
-//     height: 100%;
-//     width: auto;
-//     object-fit: cover;
-//   }
-//   .card-product-infos {
-//     line-height: 90%;
-//     padding: 16px;
-//     opacity: .7;
-//     h2 , i {
-//       color: $gray;
-//     }
-//   }
-// }
-
 
 .card-hz-s{
   background-color:white;
@@ -222,6 +200,25 @@ height: 100%;
   flex-direction: vertical;
   justify-content: center;
   align-items: center;
+  position: relative;
+  padding: 20px;
+  overflow-wrap: break-word;
+  overflow:scroll;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  h2 {
+    text-align:center;
+  }
+}
+
+.card-past-event {
+  height: 400px;
+  background-size: cover !important;
+  background-position: center;
+  position: relative;
+  margin-top: 20px;
+  justify-content: center;
+  align-items: center;
+  text-align:center;
   position: relative;
   padding: 20px;
   overflow-wrap: break-word;
