--- a/app/views/profiles/dashboard.html.erb
+++ b/app/views/profiles/dashboard.html.erb
@@ -61,7 +61,11 @@
       <% @past_events.each_with_index do |event, i| %>
         <div class="col-xs-10 col-sm-6 col-md-4 col-lg-3">
           <% if event.photo %>
-            <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.2)), url('<%= event.photo %>');">
+            <% if !@reviews[i] %>
+              <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.2)), url('<%= event.photo %>');">
+            <%else%>
+              <div class="card-past-event" style="background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.2)), url('<%= event.photo %>');">
+            <%end%>
             <h2 class="white"><%= event.name %></h2><br>
             <%= link_to 'See more details', event_path(event), class: "bdash" %>
             <% if current_user.profile.is_bar_manager %>
