--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,5 +1,5 @@
 .avatar {
-  width: 40px;
+  width: 4vw;
   border-radius: 50%;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
 }
@@ -22,5 +22,5 @@
 }
 
 .avatar-icon {
-  width: 40px;
+  width: 4vw;
 }
