--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -5,11 +5,12 @@
   align-items: center;
   h2 {
     font-family: $bebas;
-    font-size: 40px;
+    font-size: 5vw;
     margin-bottom: 0px;
     color: white;
     text-shadow: 0 0 10px rgba(0,0,0,0.3);
   }
+
   .nav-link {
     color: white;
     text-shadow: 0 0 10px rgba(0,0,0,0.3);
@@ -40,7 +41,7 @@
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 40px;
+  width: 3vw;
 }
 
 .navbar {
@@ -61,6 +62,7 @@
     color: white !important;
     text-shadow: 0 0 8px rgba(0,0,0,0.4);
     opacity: 0.8;
+    font-size: 1.5vw;
 }
 
 .dropdown-item {
@@ -99,4 +101,5 @@ li a.nav-link:hover {
 body {
   overflow-x:hidden;
 }
+
 
