--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -14,4 +14,5 @@
 @import "message";
 @import "search_form";
 @import "modal";
-@import "chat-sidenav"
+@import "chat-sidenav";
+@import "font_size";
