--- a/app/views/bars/index.html.erb
+++ b/app/views/bars/index.html.erb
@@ -6,7 +6,7 @@
 
 
 <div class="container">
-    <h1>Search for a bar nearby</h1>
+    <h1 class="t">Search for a bar nearby</h1>
         <div
       id="map"
       style="width: 100%;
@@ -15,7 +15,7 @@
       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
     ></div>
 
-  <br><h1>All bars</h1>
+  <br><h1 class="t">All bars</h1>
   <div class="row">
     <% @bars.each do |bar| %>
       <div class="col-xs-10 col-sm-6 col-md-4">
