--- a/app/views/bars/new.html.erb
+++ b/app/views/bars/new.html.erb
@@ -1,6 +1,6 @@
 <div class="fuckfooter">
   <br><br><br><br><div class="container">
-    <h1>Add your bar infos</h1>
+    <h1 class="t">Add your bar infos</h1>
     <%= render 'form' %>
   </div>
 </div>
