--- a/app/views/bars/show.html.erb
+++ b/app/views/bars/show.html.erb
@@ -17,7 +17,7 @@
 
   <% if !@bar.events.empty? %>
 
-        <br><h1>Events</h1>
+        <br><h1 class="t">Events</h1>
         <div class="row">
 
         <div class="events col-xs-12 col-sm-12 col-md-8">
@@ -81,7 +81,7 @@
 
 
 
-<br><div class="fullspace"><%= link_to "Back to list of bars", bars_path, class:"b-allwidth-lg" %></div>
+<br><div class="fullspace res"><%= link_to "Back to list of bars", bars_path, class:"b-allwidth-lg" %></div>
 
 </div>
 
