--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,5 @@
 <br><br><br><div class="container">
-  <h1>create a new event</h1>
+  <h1 class="t">create a new event</h1>
   <div class="card-login">
     <%= render 'form' %>
   </div>
