--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,7 +2,7 @@
 
 <div class="container">
   <%if !@event.description.blank? %>
-    <h1>Description</h1>
+    <h1 class="t">Description</h1>
     <h2><%= @event.description %></h2>
   <% end %>
 
