--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
 <div class="container">
 
 
-  <br><h1>Search for an event nearby !</h1>
+  <br><h1 class="t">Search for an event nearby !</h1>
 
   <%= simple_form_for(:event_search, url: events_search_path, remote: true) do |form| %>
     <div class="search-form-control form-group">
@@ -16,7 +16,7 @@
     <%= render 'events/events_list',  events: @events %>
   </div>
 
-  <br><h3><%= link_to "Discover our Artists ✨", profiles_path, class: "b-border-tbg fullspace" %></h3>
-  <h3><%= link_to "Discover our Bars 🍸", bars_path, class: "b-border-tbg fullspace" %></h3>
+  <br><h3><%= link_to "Discover our Artists ✨", profiles_path, class: "b-border-tbg fullspace res" %></h3>
+  <h3><%= link_to "Discover our Bars 🍸", bars_path, class: "b-border-tbg fullspace res" %></h3>
 
 </div>
