--- a/app/views/profiles/dashboard.html.erb
+++ b/app/views/profiles/dashboard.html.erb
@@ -5,7 +5,7 @@
   <% if !@unconfirmed_events.empty? %>
 
 
-    <br><h1>Unconfirmed Events</h1>
+    <br><h1 class="t">Unconfirmed Events</h1>
 
     <div class="row">
       <% @unconfirmed_events.each do |event| %>
@@ -31,7 +31,7 @@
 
   <% if !@current_events.empty? %>
 
-  <br><h1>Current Events</h1>
+  <br><h1 class="t">Current Events</h1>
 
     <div class="row">
       <% @current_events.each do |event| %>
@@ -55,7 +55,7 @@
 
   <% if !@past_events.empty? %>
 
-  <br><h1>Past Events</h1>
+  <br><h1 class="t">Past Events</h1>
 
     <div class="row">
       <% @past_events.each_with_index do |event, i| %>
