--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="fuckfooter">
   <div class="container">
     <br><br><br><div class="card-login">
-      <h1>Edit <%= @profile.username %></h1>
+      <h1 class="t">Edit your profile</h1>
 
       <% if current_user == @profile.user %>
           <%= simple_form_for(@profile) do |f| %>
