--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -49,7 +49,7 @@
 
       <% if !current_user.bars.empty?%>
 
-        <h1>
+        <h1 class="t">
             Partners
         </h1>
         <div class="row">
@@ -90,7 +90,7 @@
       <% end %>
 
       <% if !@profile.user.events.empty? %>
-        <h1>Events</h1>
+        <h1 class="t">Events</h1>
         <% @profile.user.events.each do |event| %>
           <div class="card-hz-bg">
             <%= cl_image_tag event.photo, width: 200, height: 200, crop: :fill %>
@@ -107,7 +107,7 @@
       <% end %>
 
       <% if current_user != @profile.user %>
-        <br><div class="fullspace">
+        <br><div class="fullspace res">
           <%= link_to "Back to list of artists", profiles_path, class:"b-allwidth-lg" %>
         </div>
       <% end %>
@@ -135,7 +135,7 @@
 
 
       <% if !@profile.user.events.empty? %>
-        <br><h1>Events</h1>
+        <br><h1 class="t">Events</h1>
         <% @profile.user.events.each do |event| %>
           <div class="card-hz-s">
             <%= cl_image_tag event.photo, width: 200, height: 200, crop: :fill %>
@@ -151,7 +151,7 @@
 
       <% if !@profile.user.bars.empty? %>
 
-        <br><h1>Bars</h1>
+        <br><h1 class="t">Bars</h1>
         <div class="row">
           <% @profile.user.bars.each do |bar| %>
             <div class="col-xs-10 col-sm-6 col-md-4 col-lg-3">
@@ -169,7 +169,7 @@
       <% end %>
 
       <% if current_user != @profile.user %>
-        <br><div class="fullspace">
+        <br><div class="fullspace res">
           <%= link_to "Back to bar page", :back, class:"b-allwidth-lg" %>
         </div>
       <%end%>
